@@ -1,0 +1,5 @@
+# $NetBSD: Makefile,v 1.1 2013/12/12 02:34:28 obache Exp $
+
+SUSE_COMPAT32=	yes
+
+.include "${.CURDIR}/../suse131_mozilla-nss/Makefile"
